--- a/src/css/main.css
+++ b/src/css/main.css
@@ -85,3 +85,56 @@ header {
 	list-style-type: none;
 }
 
+
+/* --- Character Select View --- */
+
+.container {
+	margin-top: 30px;
+	height: 475px;
+	background-color: #000;
+}
+
+#image-left,
+#image-right {
+    height: 415px;
+}
+
+#container-left {
+    width: 58%;
+    height: 415px;
+    margin: 30px 0;
+    margin-left: -8%;
+    -webkit-transform: skew(20deg);
+       -moz-transform: skew(20deg);
+         -o-transform: skew(20deg);
+    background: #d7d7d7;	
+    float: left;
+}
+
+
+#container-right {
+	width: 57%;
+	height: 415px;
+	margin: 30px 0;
+	margin-right: -8%;
+	 -webkit-transform: skew(20deg);
+       -moz-transform: skew(20deg);
+         -o-transform: skew(20deg);
+	background: #d7d7d7;
+	float: right;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
