--- a/src/css/main.css
+++ b/src/css/main.css
@@ -90,54 +90,83 @@ header {
 
 .container {
 	margin-top: 30px;
-	height: 475px;
+	height: 500px;
 	background-color: #000;
 }
 
 #image-left,
 #image-right {
-    height: 415px;
+    height: 465px;
+    overflow: hidden;
 }
 
 #container-left {
     width: 58%;
-    height: 415px;
-    margin: 30px 0;
+    height: 450px;
+    margin: 25px 0;
     margin-left: -8%;
-    -webkit-transform: skew(20deg);
+    /*-webkit-transform: skew(20deg);
        -moz-transform: skew(20deg);
-         -o-transform: skew(20deg);
+         -o-transform: skew(20deg);*/
     background: #d7d7d7;	
     float: left;
+    position: relative;
+    overflow: hidden;
 }
 
 
 #container-right {
 	width: 57%;
-	height: 415px;
-	margin: 30px 0;
+	 height: 450px;
+    margin: 25px 0;
 	margin-right: -8%;
-	 -webkit-transform: skew(20deg);
+	 /*-webkit-transform: skew(20deg);
        -moz-transform: skew(20deg);
-         -o-transform: skew(20deg);
+         -o-transform: skew(20deg);*/
 	background: #d7d7d7;
 	float: right;
+	position: relative;
+	overflow: hidden;
 }
 
 
-#left img,
-#right img {
-	height: 415px;
+#left {
+	position: absolute;
+	background-position: left;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	height: 100%;
 	width: 100%;
+	/*
 	-webkit-transform: skew(-20deg);
        -moz-transform: skew(-20deg);
          -o-transform: skew(-20deg);
+         */
     margin-left: 9%;
-    border: none;
-    outline: none;
+    /*padding: 5px;*/	
+}
+
+#right {
+	position: absolute;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	height: 100%;
+	width: 100%;
+	/*-webkit-transform: skew(-20deg);
+       -moz-transform: skew(-20deg);
+         -o-transform: skew(-20deg);*/
+    
 }
 
 
+/* --- Search and Fight Button --- */
+
+
+
+input[type="text"] {
+	display: inline-block;
+}
 
 
 
