--- a/src/css/main.css
+++ b/src/css/main.css
@@ -83,6 +83,8 @@ header {
 
 .char-list {
 	list-style-type: none;
+	float: left;
+	width: 20%	;
 }
 
 
@@ -92,65 +94,56 @@ header {
 	margin-top: 30px;
 	height: 500px;
 	background-color: #000;
+	position: relative;
 }
 
 #image-left,
 #image-right {
-    height: 465px;
-    overflow: hidden;
+    height: 500px;
+    /*overflow: hidden;*/
+}
+
+#container-left,
+#container-right {
+	width: 54vw;
+    height: 460px;
+    background: #d7d7d7;
+    top: 20px;
+    position: absolute;
+    background-image: url('../Images/default-hero.png');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    
 }
 
 #container-left {
-    width: 58%;
-    height: 450px;
-    margin: 25px 0;
-    margin-left: -8%;
-    /*-webkit-transform: skew(20deg);
-       -moz-transform: skew(20deg);
-         -o-transform: skew(20deg);*/
-    background: #d7d7d7;	
-    float: left;
-    position: relative;
-    overflow: hidden;
+    left: 10px;
+ 	-webkit-clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 0% 100%);   
+ 	clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 0% 100%);   
 }
 
 
 #container-right {
-	width: 57%;
-	 height: 450px;
-    margin: 25px 0;
-	margin-right: -8%;
-	 /*-webkit-transform: skew(20deg);
-       -moz-transform: skew(20deg);
-         -o-transform: skew(20deg);*/
-	background: #d7d7d7;
-	float: right;
-	position: relative;
-	overflow: hidden;
+	right: 10px; 
+	background-color: #d7d7d7; 
+	-webkit-clip-path: polygon(100% 100%, 100% 0%, 20% 0%, 0% 100%);   
+ 	clip-path: polygon(100% 100%, 100% 0%, 20% 0%, 0% 100%);   
 }
 
 
 #left {
-	position: absolute;
-	background-position: left;
+	background-position: center center;
 	background-repeat: no-repeat;
-	background-size: 100% 100%;
+	background-size: cover;
 	height: 100%;
 	width: 100%;
-	/*
-	-webkit-transform: skew(-20deg);
-       -moz-transform: skew(-20deg);
-         -o-transform: skew(-20deg);
-         */
-    margin-left: 9%;
-    /*padding: 5px;*/	
 }
 
 #right {
-	position: absolute;
-	background-position: center;
+	background-position: center center;
 	background-repeat: no-repeat;
-	background-size: 100% 100%;
+	background-size: cover;
 	height: 100%;
 	width: 100%;
 	/*-webkit-transform: skew(-20deg);
@@ -162,11 +155,23 @@ header {
 
 /* --- Search and Fight Button --- */
 
+/*div.results {
+	float: left;
+}*/
 
-
-input[type="text"] {
-	display: inline-block;
+input[type="text"]{
+	float: left;
+	margin: 30px;
 }
+
+.fight-button {
+	float: left;
+}
+
+
+/*.results-right input[type="text"] {
+	float: right;
+}*/
 
 
 
