--- a/src/css/main.css
+++ b/src/css/main.css
@@ -159,13 +159,22 @@ header {
 	float: left;
 }*/
 
-input[type="text"]{
-	float: left;
-	margin: 30px;
+.search-bar {
+	width: 100%;
+	margin-top: 20px;
+	position: relative;
 }
 
-.fight-button {
-	float: left;
+.search-left .search-results  {
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+.search-results  {
+	position: absolute;
+	right: 0;
+	top: 0;
 }
 
 
