--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,6 +24,14 @@ main {
 	overflow: visible;
 }
 
+footer {
+	background-color: #000;
+}
+
+small {
+	color: #d7d7d7;
+}
+
 
 /* --- HEADER --- */
 
@@ -101,6 +109,12 @@ header {
 	float: left;
 	width: 25%;
 	margin-top: 20px;
+}
+
+ul {
+	background-color: #4a4a4a;
+	width: 100%;
+	height: 300px;
 }
 
 
