--- a/src/css/main.css
+++ b/src/css/main.css
@@ -63,7 +63,9 @@ header {
 	display: block;
 	position: relative;
 	background-position: center;
-	background-color: rgba(248, 230, 216, 0.30)
+	background-color: rgba(248, 230, 216, 0.30);
+	color: #fff;
+	text-shadow: 2px 2px #FF0000;
 }
 
 #title:before {
@@ -193,7 +195,7 @@ ul {
 
 .search-bar {
 	width: 100%;
-	height: 30px;
+	height: 50px;
 	margin-top: 20px;
 	position: relative;
 }
