--- a/src/css/main.css
+++ b/src/css/main.css
@@ -110,13 +110,21 @@ header {
 	list-style-type: none;
 	float: left;
 	width: 25%;
-	margin-top: 20px;
+	padding-top: 20px;
 }
 
 ul {
+	/*background-color: #000;*/
+	width: 90%;
+	/*height: 300px;*/
+	display: block;
+	margin: 0 auto;
+	padding: 0;
+}
+
+li {
 	background-color: #4a4a4a;
-	width: 100%;
-	height: 300px;
+	/*margin: 10px 10px;*/
 }
 
 
@@ -214,7 +222,7 @@ ul {
 
 .fight-button {
 	position: absolute;
-	left: 42vw;
+	left: 43vw;
 	top: 0;
 	width: 195px;
 	height: 40px;
@@ -225,6 +233,11 @@ ul {
 	height: 20px !important;
 	opacity: 1 !important;
 }
+
+
+/* --- PAGE BREAKS --- */
+
+.page-break {}
 
 
 
